# orbiter-autosave

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  Resources.rc  StateSnap.cpp  StateSnap.h  StateSnapDlg.cpp  StateSnapDlg.h  resource.h
.github/workflows/: build.yml
